탭 생성 - 키보드 입력 받아 선택

--- a/Conquer_Us/Conquer_Us/Conquer_Us.vcxproj.filters
+++ b/Conquer_Us/Conquer_Us/Conquer_Us.vcxproj.filters
@@ -18,9 +18,18 @@
     <ClCompile Include="main.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="makeTap.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="worldmap.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="data.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="makeTap.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
