--- a/Conquer_Us/Conquer_Us/Conquer_Us.vcxproj
+++ b/Conquer_Us/Conquer_Us/Conquer_Us.vcxproj
@@ -140,8 +140,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.c" />
+    <ClCompile Include="makeTap.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="data.h" />
+    <ClInclude Include="makeTap.h" />
     <ClInclude Include="worldmap.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
